--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/node": "18.15.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@uidotdev/usehooks": "^2.0.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "googleapis": "^118.0.0",
@@ -21,7 +20,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-social-icons": "^5.15.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
